# g5500-hamlib-adaptor

./: README.md
firmware/: Cargo.toml  Errata.md  README.md  memory.x
firmware/src/: config.rs  crc8_ccitt.rs  main.rs
pcb/: BOM.md  README.md  fp-lib-table  g5500-net-interface.kicad_pcb  g5500-net-interface.kicad_pro  g5500-net-interface.kicad_sch  sym-lib-table
pcb/dev-r1/: g5500-net-interface-B_Cu.gbr  g5500-net-interface-B_Mask.gbr  g5500-net-interface-B_Paste.gbr  g5500-net-interface-B_Silkscreen.gbr  g5500-net-interface-Edge_Cuts.gbr  g5500-net-interface-F_Cu.gbr  g5500-net-interface-F_Mask.gbr  g5500-net-interface-F_Paste.gbr  g5500-net-interface-F_Silkscreen.gbr  g5500-net-interface-NPTH.drl  g5500-net-interface-PTH.drl  g5500-net-interface-job.gbrjob
pcb/lib/MAB8SH/: MAB8SH.kicad_mod  MAB8SH.kicad_sym
pcb/lib/W5500-EVB-PICO/: MODULE_W5500-EVB-PICO.kicad_mod  W5500-EVB-PICO.kicad_sym
