[package]
edition = "2021"
name = "g5500-hamlib-adaptor"
version = "0.1.0"
license = "MIT"


[dependencies]
embassy-embedded-hal = { version = "0.3.0", path = "./embassy/embassy-embedded-hal", features = ["defmt"] }
embassy-sync = { version = "0.6.2", path = "./embassy/embassy-sync", features = ["defmt"] }
embassy-executor = { version = "0.7.0", path = "./embassy/embassy-executor", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.4.0", path = "./embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.4.0", path = "./embassy/embassy-rp", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-usb = { version = "0.4.0", path = "./embassy/embassy-usb", features = ["defmt"] }
embassy-net = { version = "0.7.0", path = "./embassy/embassy-net", features = ["defmt", "tcp", "dhcpv4", "dhcpv4-hostname", "medium-ethernet", "proto-ipv4"] }
embassy-net-wiznet = { version = "0.2.0", path = "./embassy/embassy-net-wiznet", features = ["defmt"] }
embassy-futures = { version = "0.1.0", path = "./embassy/embassy-futures" }

defmt = "0.3"
defmt-rtt = "0.4"
fixed = "1.23.1"
fixed-macro = "1.2"

# for web request example
reqwless = { version = "0.13.0", features = ["defmt"] }
serde = { version = "1.0.203", default-features = false, features = ["derive"] }
serde-json-core = "0.6.0"

#cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.1", features = ["async"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
embedded-storage = { version = "0.3" }
static_cell = "2.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }
log = "0.4"
rand = { version = "0.8.5", default-features = false }

# Phil
heapless = "0.8.0"
nom = { version = "8.0.0", default-features = false }
format_no_std = "1.2.0"
assign-resources = "0.4.1"
git-version = "0.3.9"


[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"
